# dreamdexer-monorepo

./: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  LICENSE.md  README.md  build-and-push-image.sh
libraries/blockchain_api/: Cargo.toml
libraries/blockchain_api/src/: base.rs  builder.rs  lib.rs
libraries/blockchain_api/src/blockchains/: evm_api.rs  mod.rs  solana_api.rs
libraries/common/: Cargo.toml
libraries/common/src/: blockchain_enums.rs  lib.rs  normalized_types.rs  rpc_client.rs  rpc_types.rs  txn_types.rs
libraries/dreamdexer_psql/: Cargo.toml
libraries/dreamdexer_psql/src/: init.sql  lib.rs  models.rs  schema.rs
libraries/tx_processor/: Cargo.toml
libraries/tx_processor/src/: base.rs  builder.rs  enums.rs  lib.rs  types.rs  utils.rs
libraries/tx_processor/src/blockchains/: avalanche_tokens_map.rs  evm_tx_processor.rs  instruction_data_processor.rs  instruction_parser.rs  mod.rs  solana_tx_processor.rs  token_program_data_processor.rs
services/evm-collector/: .env.example  Cargo.toml
services/evm-collector/src/: collector.rs  listerner.rs  main.rs
services/evm-loader/: .env  Cargo.toml
services/evm-loader/src/: loader_handler.rs  main.rs
services/evm-processor/: .env  Cargo.toml
services/evm-processor/src/: main.rs  processor_pipeline.rs
services/evm-syncer/: Cargo.toml
services/evm-syncer/src/: main.rs  producer.rs
services/evm-tx-processor/: Cargo.toml
services/evm-tx-processor/src/: main.rs  processor_pipeline.rs  producer.rs
