[package]
name = "blockchain_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
serde = { version = "1.0.137", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.57"
serde_json ="1.0"
async-trait = "0.1.53"
rayon = "1.5.3"
bs58 = "0.4.0"
spl-token-2022 = "0.4.0"
futures = "0.3.21"
websocket = "0.26.4"
awc = "3.0.0"
futures-util = "0.3.21"
tungstenite = "0.17.2"
url = "2.2.2"
tokio-tls = "0.3.1"
native-tls = "0.2.10"
log = "0.4.17"
tokio-tungstenite = "0.17.1"
