[package]
name = "blockchain_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
serde = { version = "1.0.137", features = ["derive"] }
serde_json ="1.0"
reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1.20.0", features = ["full"] }
anyhow = "1.0.57"
async-trait = "0.1.53"
rayon = "1.5.3"
futures = "0.3.21"
websocket = "0.26.5"
log = "0.4.17"
