[package]
name = "tx_processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
serde = { version = "1.0.137", features = ["derive"] }
anyhow = "1.0.57"
serde_json ="1.0"
async-trait = "0.1.53"
rayon = "1.5.3"
bs58 = "0.4.0"
spl-token-2022 = "0.4.0"
num-bigint = "0.4.3"
num-traits = "0.2.15"
bigdecimal = "0.3.0"
web3 = "0.18.0"
ethabi-contract = "16.0.0"
ethabi-derive = "16.0.0"
ethabi = "17.1.0"
hex = "0.4.3"
sha3 = "0.10.1"
