[package]
name = "evm-collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
awc = "3.0.0"
blockchain_api = { path = "../../libraries/blockchain_api"}
common = { path = "../../libraries/common"}
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.21"
lapin = "2.1.1"
log = "0.4.17"
reqwest = "0.11.11"
tokio = "1.19.2"
web3 = "0.18.0"
websocket = "0.26.4"
serde_json ="1.0"

