[package]
name = "evm-loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
dreamdexer_psql = { path = "../../libraries/dreamdexer_psql"}
common = { path = "../../libraries/common"}
tokio = { version = "1.19.2", features = ["full"] }
tokio-postgres = "0.7.6"
anyhow = "1.0.58"
log = "0.4.17"
lapin = "2.1.1"
futures-lite = "1.12.0"
serde_json ="1.0"
serde = { version = "1.0.137", features = ["derive"] }
env_logger = "0.9.0"

